Set missing permissions

--- a/.github/workflows/compile-proposal.yml
+++ b/.github/workflows/compile-proposal.yml
@@ -7,6 +7,9 @@ on:
       - 'writing/proposal/**'
       - 'writing/kcss/**'
 
+permissions:
+  contents: write
+
 jobs:
   compile-proposal:
     runs-on: ubuntu-latest
